<resources>
    <string name="app_name">Buddy Search</string>
    <string name="google">Sign in with Google</string>
    <string name="sign_out">Sign out</string>
    <string name="logged_as">Logged as:</string>
    <string name="other_users">Other users:</string>
    <string name="sign_out_error">Sign out error occurred</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="send">Send</string>
    <string name="label_users">Users</string>
    <string name="label_login">Login</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="authenticating">Authenticating…</string>
    <string name="edit_message">Edit message</string>
    <string name="delete_message">Delete message</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sending">Sending…</string>
    <string name="deleting">Deleting…</string>
    <string name="editing">Editing…</string>
    <string name="signing_out">Signing out…</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="user_was_successfully_edited">User was successfully edited.</string>
</resources>
